# MEvoLib

./: .gitignore  CONTRIB  LICENSE  NOTICE  README  README.md  conftest.py  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: python-ci.yml  python-package.yml
MEvoLib/: __init__.py  _utils.py
MEvoLib/Align/: _ClustalOmega.py  _Mafft.py  _Muscle.py  __init__.py
MEvoLib/Cluster/: Genes.py  NaiveCols.py  NaiveRows.py  PRD.py  __init__.py
MEvoLib/Data/: __init__.py  rCRS.py
MEvoLib/Fetch/: BioSeqs.py  PhyTrees.py  __init__.py
MEvoLib/Inference/: _FastTree.py  _RAxML.py  __init__.py
MEvoLib/PhyloAssemble/: _Consense.py  __init__.py
MEvoLib/_py3k/: TemporaryDirectory.py  __init__.py
Tests/: README  my_test_Inference_FastTree.py  my_test_Inference_RAxML.py  run_tests.py  test_Align_ClustalOmega.py  test_Align_Mafft.py  test_Align_Muscle.py  test_BioSeqs.py  test_Cluster_Genes.py  test_Cluster_NaiveCols.py  test_Cluster_NaiveRows.py  test_Cluster_PRD.py  test_Inference_FastTree.py  test_Inference_RAxML.py  test_PhyTrees.py  test_PhyloAssemble_Consense.py
Tests/BioSeqs/: f001.rep  f004.gb  f004.rep
Tests/Fasta/: f001.muscle_largein.aln  f006.fasta
Tests/Genbank/: f006.genbank
Tests/Newick/: f001.fasttree_JTT+CAT.newick  f001.fasttree_WAG+CAT.newick  f001.raxml_HKY+G.newick  f001.raxml_JC+CAT.newick  f001.raxml_JTT+CAT.newick  f001.raxml_K80+CAT.newick  f001.raxml_K80+G.newick  f001.raxml_WAG+CAT.newick  f001.raxml_WAG+G.newick  f001.raxml_default.newick  f005.trees.newick
Tests/Nexus/: f005.trees.nexus
Tests/Phylip/: f001.clustalo_default.aln  f003.phylip
docs/: Borrelia burgdorferi study.ipynb  Genes method study.ipynb  MT-ATP6 and MT-ATP8 study.ipynb
mevolib/: __init__.py  _utils.py  align2.py
mevolib/align/: _ClustalOmega.py  _Mafft.py  _Muscle.py  __init__.py
mevolib/cluster/: Genes.py  NaiveCols.py  NaiveRows.py  PRD.py  __init__.py
mevolib/data/: __init__.py  rCRS.gb  rCRS.py
mevolib/fetch/: BioSeqs.py  PhyTrees.py  __init__.py
mevolib/inference/: _FastTree.py  _RAxML.py  __init__.py
mevolib/phyloassemble/: __init__.py  (+1 more)
old_unittests/: test_Align_ClustalOmega.py  test_Align_Mafft.py  test_Cluster_NaiveCols.py  test_Cluster_PRD.py  test_PhyTrees.py
tests/: conftest.py  my_test_Inference_FastTree.py  my_test_Inference_RAxML.py  my_test_Inference__init_.py  run_tests.py  test_Align_Muscle.py  test_BioSeqs.py  test_Cluster_Genes.py  test_Cluster_NaiveRows.py  test_Inference_FastTree.py  test_Inference_RAxML.py  test_PhyloAssemble_Consense.py  test_align.py  test_inference.py  test_mafft.py  test_test.py  test_utils.py
(+50 files in other folders)
